# discord-Bot-Manager

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
include/: ActionManager.h  DirectMsg.h  backend.h  customCommands.h  encryption.h
src/: ActionManager.cpp  DirectMsg.cpp  backend.cpp  customCommands.cpp  encryption.cpp  main.cpp
